[build-system]
requires = ["setuptools>=68", "wheel", "numpy>=1.23"]
build-backend = "setuptools.build_meta"

[project]
name = "b1like"
version = "0.1.0"
description = "Cobaya likelihood package for BK component-separation bandpower likelihoods."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "KW, YL"}]
dependencies = [
  "cobaya",
  "numpy",
  "scipy",
]

[project.optional-dependencies]
dev = [
  "astropy",
  "healpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["b1like*"]

[tool.setuptools.package-data]
b1like = ["*.yaml", "*.npz", "c/*.c", "c/*.h"]

[tool.ruff]
line-length = 110
target-version = "py310"
exclude = [".git", "versioneer.py", "src/bkspt/_version.py", "local/"]
output-format = "pylint" # important for editors like pycharm (https://github.com/astral-sh/ruff/issues/19983)
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes errors
    "W",   # pycodestyle warnings
    "C90", # McCabe complexity (flake8-mccabe)
    "D",   # pydocstyle (docstring convention)
]
ignore = [
    "E203", "E228", "E226","E227", "E231", "E261", "E731", "E741", # pycodestyle
    "F401", "F405", "F541", "F841", # flake8
    "D100", "D101", "D102", "D103", "D104", "D105", "D204", "D401", # docstrings
    "W293",
]

[tool.ruff.format]
quote-style = "preserve"
skip-magic-trailing-comma = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
